Remove tornadoFx/javaFx